--- a/MixerInterface.csproj
+++ b/MixerInterface.csproj
@@ -41,7 +41,7 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\icon.svg"/>
+        <MauiIcon Include="Resources\AppIcon\logo_xmark.png" Color="#ee3967" BaseSize="128,128"/>
 
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\logo.png" Color="#ee3967" />
@@ -58,8 +58,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.7.7" />
-        <PackageReference Include="Blazorise.Tailwind" Version="1.7.7" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.8.7" />
+        <PackageReference Include="Blazorise.Tailwind" Version="1.8.7" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)"/>
