--- a/MixerInterface.csproj
+++ b/MixerInterface.csproj
@@ -25,7 +25,7 @@
         <ApplicationTitle>Eggbox</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.eggbox</ApplicationId>
+        <ApplicationId>com.eggbox</ApplicationId>
 
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -41,14 +41,16 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\logo_xmark.png" Color="#ee3967" BaseSize="128,128"/>
-
+        <MauiIcon Include="Resources\AppIcon\logo_xmark.png" Color="#ee3967" />
+        
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\logo.png" Color="#ee3967" />
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*"/>
         <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208"/>
+
+
 
         <!-- Custom Fonts -->
         <MauiFont Include="Resources\Fonts\*"/>
